# sing-box-gui

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
assets/: NotoSansCJK-LICENSE.txt
src/: api.rs  config.rs  core.rs  main.rs  message.rs  platform.rs  state.rs  sysproxy.rs  update.rs
src/ui/: connections.rs  dashboard.rs  i18n.rs  icons.rs  logs.rs  mod.rs  profiles.rs  proxies.rs  rules.rs  settings.rs  theme.rs  toast.rs  util.rs
