[package]
name = "sing-box-gui"
version = "2026.7.11"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
iced = { version = "0.14.0", features = ["tokio", "canvas", "image", "svg"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
sysproxy = "0.3.0"
zip = "2.0"
flate2 = "1.0"
tar = "0.4"
url = "2.5"
base64 = "0.22"
chrono = "0.4"
futures = "0.3"
tempfile = "3.10"
urlencoding = "2.1"
tray-icon = "0.24.1"
image = "0.25.10"
encoding_rs = "0.8.35"
dirs = "6.0"
rfd = "0.15"
open = "5.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
