[package]
name = "sing-box-gui"
version = "2026.7.23"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
iced = { version = "0.14.0", default-features = false, features = ["tokio", "wgpu", "tiny-skia", "crisp", "image", "svg", "linux-theme-detection", "x11", "wayland"] }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
zip = "2.0"
flate2 = "1.0"
tar = "0.4"
url = "2.5"
base64 = "0.22"
sha2 = "0.10"
chrono = "0.4"
futures = "0.3"
tempfile = "3.10"
urlencoding = "2.1"
tray-icon = "0.24.1"
image = "0.25.10"
encoding_rs = "0.8.35"
dirs = "6.0"
rfd = "0.15"
open = "5.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
windows-sys = { version = "0.52", features = ["Win32_System_JobObjects", "Win32_Foundation"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[patch.crates-io]
# wayland-scanner 0.31.10 on crates.io still pins vulnerable quick-xml 0.39.
# Keep the released scanner source/API and apply only the upstream 0.41 bump.
wayland-scanner = { path = "vendor/wayland-scanner" }
